--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "node-gd": "^1.2.0",
     "passport-local-mongoose": "^4.0.0",
     "serve-favicon": "~2.3.0"
   }
