--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "^1.15.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.13.4",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.12",
-    "morgan": "~1.6.1",
+    "morgan": "^1.7.0",
     "node-gd": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
