--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
+    "ejs": "^2.4.2",
     "express": "^4.13.4",
     "gm": "^1.22.0",
     "jade": "~1.11.0",
