--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.1",
     "body-parser": "^1.15.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
