--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "make test"
   },
   "dependencies": {
     "async": "^2.0.1",
     "body-parser": "^1.15.0",
+    "chai": "^3.5.0",
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "crypto": "0.0.3",
@@ -17,6 +19,7 @@
     "gm": "^1.22.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.7.0",
+    "mocha": "^3.0.2",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
     "node-gd": "^1.2.0",
@@ -24,6 +27,7 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "should": "^11.1.0"
   }
 }
