--- a/package.json
+++ b/package.json
@@ -7,27 +7,27 @@
     "test": "make test"
   },
   "dependencies": {
-    "async": "^2.0.1",
-    "body-parser": "^1.15.0",
+    "async": "^2.1.4",
+    "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "cookie-parser": "~1.3.5",
-    "cors": "^2.7.1",
+    "cors": "^2.8.1",
     "crypto": "0.0.3",
     "debug": "~2.2.0",
-    "ejs": "^2.4.2",
-    "express": "^4.13.4",
-    "gm": "^1.22.0",
+    "ejs": "^2.5.5",
+    "express": "^4.14.0",
+    "gm": "^1.23.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^5.7.0",
-    "mocha": "^3.0.2",
-    "mongoose": "^4.6.3",
+    "mocha": "^3.2.0",
+    "mongoose": "^4.7.5",
     "morgan": "^1.7.0",
-    "node-gd": "^1.2.0",
-    "nodemailer": "^2.4.2",
+    "node-gd": "^1.4.0",
+    "nodemailer": "^2.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.0.0",
-    "serve-favicon": "~2.3.0",
-    "should": "^11.1.0"
+    "serve-favicon": "^2.3.2",
+    "should": "^11.1.2"
   }
 }
