--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "make test"
   },
   "dependencies": {
+    "apn": "^2.1.2",
     "async": "^2.1.4",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
