--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.7.5",
     "morgan": "^1.7.0",
     "node-gd": "^1.4.0",
+    "node-schedule": "^1.2.0",
     "nodemailer": "^2.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
