--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mocha": "^3.2.0",
     "mongoose": "^4.7.5",
     "morgan": "^1.7.0",
+    "node-gcm": "^0.14.4",
     "node-gd": "^1.4.0",
     "node-schedule": "^1.2.0",
     "nodemailer": "^2.7.0",
